Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -68,6 +68,14 @@ Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글
 </ul>
 </div>
 </div>
+<div id="outline-container-orgfe52c83" class="outline-2">
+<h2 id="orgfe52c83">iOS</h2>
+<div class="outline-text-2" id="text-orgfe52c83">
+<ul class="org-ul">
+<li><a target="_blank" href="https://mildwhale.github.io/2019-12-27-iOS-supporting-dark-mode/">iOS 13에서 다크 모드 지원하기 (Supporting Dark Mode)</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-orgc5107d5" class="outline-2">
 <h2 id="orgc5107d5">Appstore</h2>
 <div class="outline-text-2" id="text-orgc5107d5">
@@ -77,6 +85,6 @@ Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 27일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
