--- a/etc-dev-links.html
+++ b/etc-dev-links.html
@@ -52,6 +52,7 @@ gtag('config', 'UA-44534026-1');
 <h2 id="org2607cf2">Rust</h2>
 <div class="outline-text-2" id="text-org2607cf2">
 <ul class="org-ul">
+<li><a target="_blank" href="https://rinthel.github.io/rust-lang-book-ko/">The Rust Programming Language (한국어판)</a>: 러스트 프로그래밍 언어</li>
 <li><a target="_blank" href="https://parksb.github.io/article/35.html">🦀 러스트의 멋짐을 모르는 당신은
 불쌍해요</a>: Rust의 전반적인 소개글</li>
 <li><a target="_blank" href="http://cliffle.com/p/dangerust/">Learn Rust the Dangerous Way</a>: C 코드와 Rust 코드 비교로 Rust를 공부할 수 있는 사이트</li>
@@ -74,6 +75,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 27일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
