--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="lisp.html">Lisp</a></li>
 <li><a href="javascript.html">Javascript</a></li>
 <li><a href="css.html">CSS(Cascading Style Sheets)</a></li>
-<li><a href="sh.html">Bourne Shell</a></li>
+<li><a href="sh.html">Bourne Shell(sh)</a></li>
 </ul>
 </div>
 </div>
@@ -118,6 +118,7 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-3" id="text-orgd9d658f">
 <ul class="org-ul">
 <li><a href="mongodb.html">MongoDB</a></li>
+<li><a href="github-actions.html">Github Actions</a></li>
 </ul>
 </div>
 </div>
@@ -141,9 +142,10 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org32930d9">기타</h3>
 <div class="outline-text-3" id="text-org32930d9">
 <ul class="org-ul">
-<li><a href="english.html">영어 노트</a></li>
-<li><a href="italian.html">이탈리아어 노트</a></li>
-<li><a href="korean.html">한국어 문법 노트</a></li>
+<li><a href="english.html">영어 노트</a>: 개인용 노트</li>
+<li><a href="italian.html">이탈리아어 노트</a>: 이것도 개인용 노트</li>
+<li><a href="korean.html">한국어 문법 노트</a>: 이것 또한 개인용 노트</li>
+<li><a href="minecraft.html">마인크래프트</a>: 그냥 정말 개인용 마인크래프트 메모장</li>
 </ul>
 
 <p>
@@ -152,6 +154,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 27일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
