--- a/sitemap.html
+++ b/sitemap.html
@@ -56,6 +56,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="flutter.html">Flutter</a></li>
 <li><a href="index.html">Frontpage</a></li>
 <li><a href="git.html">Git</a></li>
+<li><a href="github-actions.html">Github Actions</a></li>
 <li><a href="homebrew.html">Homebrew</a></li>
 <li><a href="javascript.html">Javascript</a></li>
 <li><a href="lisp.html">Lisp</a></li>
