Add more infomation for frontpage

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org9a6b2ed">프로필(Profile)</h3>
 <div class="outline-text-3" id="text-org9a6b2ed">
 <ul class="org-ul">
-<li><a href="./profile.html">Profile</a></li>
+<li><a href="./profile.html">Profile</a>: 사적인 정보(?)는 없는 프로필입니다.</li>
 </ul>
 </div>
 </div>
@@ -71,10 +71,10 @@ gtag('config', 'UA-44534026-1');
 <h3 id="orgf4a2e4e">에디터(Editors)</h3>
 <div class="outline-text-3" id="text-orgf4a2e4e">
 <ul class="org-ul">
-<li><a href="emacs.html">Emacs</a></li>
-<li><a href="doom-emacs.html">Doom Emacs</a></li>
-<li><a href="spacemacs.html">Spacemacs</a></li>
-<li><a href="vim.html">Vim</a></li>
+<li><a href="emacs.html">Emacs</a>: 이맥스와 관련된 글들을 모아 놨습니다.</li>
+<li><a href="doom-emacs.html">Doom Emacs</a>: 이맥스와 관련된 글들 중 둠 이맥스와 관련된 것들만 따로 모아 봤습니다.</li>
+<li><a href="spacemacs.html">Spacemacs</a>: 스페이스맥스를 간략히 정리하는 글입니다.</li>
+<li><a href="vim.html">Vim</a>: 빔 이데터에 관한 메모를 모으는 페이지입니다.</li>
 </ul>
 </div>
 </div>
@@ -82,12 +82,12 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org846c188">프로그래밍 언어(Programming Language)</h3>
 <div class="outline-text-3" id="text-org846c188">
 <ul class="org-ul">
-<li><a href="swift.html">Swift</a></li>
-<li><a href="python.html">Python</a></li>
-<li><a href="lisp.html">Lisp</a></li>
-<li><a href="javascript.html">Javascript</a></li>
-<li><a href="css.html">CSS(Cascading Style Sheets)</a></li>
-<li><a href="sh.html">Bourne Shell(sh)</a></li>
+<li><a href="swift.html">Swift</a>: 가장 좋아하는 프로그래밍 언어인 스위프트와 관련된 글들을 모은 페이지입니다.</li>
+<li><a href="python.html">Python</a>: 두 번째로 좋아하는 프로그래밍 언어인 파이썬과 관련된 글들을 모은 페이지입니다.</li>
+<li><a href="lisp.html">Lisp</a>: 싫어하지만(?) 억지로 써야 하는 리습과 관련된 글들을 모아둔 페이지입니다.</li>
+<li><a href="javascript.html">Javascript</a>: 자바스크립트와 관련된 글들을 쓸 예정입니다.</li>
+<li><a href="css.html">CSS(Cascading Style Sheets)</a>: CSS에 관한 몇몇 정보를 모으는 페이지입니다.</li>
+<li><a href="sh.html">Bourne Shell(sh)</a>: 쉘 스크립팅에 관한 내용이 주인 sh 페이지입니다.</li>
 </ul>
 </div>
 </div>
@@ -95,9 +95,9 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org0685d45">개발용 도구들</h3>
 <div class="outline-text-3" id="text-org0685d45">
 <ul class="org-ul">
-<li><a href="git.html">Git</a></li>
-<li><a href="docker.html">Docker</a></li>
-<li><a href="kubectl.html">kubectl</a></li>
+<li><a href="git.html">Git</a>: 깃과 관련된 정보를 모아둔 페이지입니다.</li>
+<li><a href="docker.html">Docker</a>: 도커와 관련된 정보를 모아둔 페이지입니다.</li>
+<li><a href="kubectl.html">kubectl</a>: 쿠버네티스 CLI 도구인 kubectl 사용법을 모아둔 페이지입니다.</li>
 </ul>
 </div>
 </div>
@@ -105,11 +105,11 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org1bed2a7">기타 도구들</h3>
 <div class="outline-text-3" id="text-org1bed2a7">
 <ul class="org-ul">
-<li><a href="tmux.html">Tmux</a></li>
-<li><a href="homebrew.html">Homebrew</a></li>
-<li><a href="iconv.html">iconv</a></li>
-<li><a href="find.html">find</a></li>
-<li><a href="caffeinate.html">caffeinate</a></li>
+<li><a href="tmux.html">Tmux</a>: Tmux 사용법을 정리하는 페이지입니다.</li>
+<li><a href="homebrew.html">Homebrew</a>: 맥 용 패키지 관리자 흠브루에 관한 내용을 정리하는 페이지입니다.</li>
+<li><a href="iconv.html">iconv</a>: 인코딩 변환 도구인 iconv의 사용법을 간략히 정리합니다.</li>
+<li><a href="find.html">find</a>: 파일 검색 도구인 find 유틸리티의 사용법을 정리하는 페이지입니다.</li>
+<li><a href="caffeinate.html">caffeinate</a>: 맥 공식 잠자기 방해 도구인 카페이네이트 사용법을 간략히 정리하는 페이지입니다.</li>
 </ul>
 </div>
 </div>
@@ -117,8 +117,8 @@ gtag('config', 'UA-44534026-1');
 <h3 id="orgd9d658f">분류하기 애매한 것들</h3>
 <div class="outline-text-3" id="text-orgd9d658f">
 <ul class="org-ul">
-<li><a href="mongodb.html">MongoDB</a></li>
-<li><a href="github-actions.html">Github Actions</a></li>
+<li><a href="mongodb.html">MongoDB</a>: 몽고DB와 관련된 내용을 정리하는 페이지입니다.</li>
+<li><a href="github-actions.html">Github Actions</a>: 깃헙 액션에 관한 내용을 정리하는 페이지입니다.</li>
 </ul>
 </div>
 </div>
@@ -142,10 +142,10 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org32930d9">기타</h3>
 <div class="outline-text-3" id="text-org32930d9">
 <ul class="org-ul">
-<li><a href="english.html">영어 노트</a>: 개인용 노트</li>
-<li><a href="italian.html">이탈리아어 노트</a>: 이것도 개인용 노트</li>
-<li><a href="korean.html">한국어 문법 노트</a>: 이것 또한 개인용 노트</li>
-<li><a href="minecraft.html">마인크래프트</a>: 그냥 정말 개인용 마인크래프트 메모장</li>
+<li><a href="english.html">영어 노트</a>: 개인용 노트입니다.</li>
+<li><a href="italian.html">이탈리아어 노트</a>: 이것도 개인용 노트입니다.</li>
+<li><a href="korean.html">한국어 문법 노트</a>: 이것 또한 개인용 노트입니다.</li>
+<li><a href="minecraft.html">마인크래프트</a>: 그냥 정말 개인용 마인크래프트 메모장 수준의 페이지입니다.</li>
 </ul>
 
 <p>
