Update several pages and keywords

--- a/python.html
+++ b/python.html
@@ -41,6 +41,7 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
+<li><a href="#orgde0e9bf">Python</a></li>
 <li><a href="#orge25f44a">관련된 글 목록</a></li>
 <li><a href="#orgb198dc7">메모</a>
 <ul>
@@ -51,18 +52,23 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </nav>
+
+<div id="outline-container-orgde0e9bf" class="outline-2">
+<h2 id="orgde0e9bf">Python</h2>
+<div class="outline-text-2" id="text-orgde0e9bf">
 <p>
 파이썬(Python)은 네덜란드 출신의 귀도 반 로썸(Guide van Rossum)에 의해 탄생한
 프로그래밍 언어입니다. 동적 타이핑을 사용하는 인터프리터 언어라는 점도
 특징이지만, 역시 들여쓰기를 블럭 구분으로 사용하는 것을 문법으로 강제하는
 언어라는 점이 가장 큰 특징입니다.
 </p>
-
+</div>
+</div>
 <div id="outline-container-orge25f44a" class="outline-2">
 <h2 id="orge25f44a">관련된 글 목록</h2>
 <div class="outline-text-2" id="text-orge25f44a">
 <ul class="org-ul">
-<li><a href="python-update-log.html">Python 업데이트 기록</a></li>
+<li><a href="python-update-log.html">Python 버전별 업데이트 내역</a></li>
 <li><a href="migrate-to-python3.html">수동으로 Python 3로 옮겨가기</a></li>
 <li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
