--- a/sitemap.html
+++ b/sitemap.html
@@ -78,6 +78,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
 <li><a href="swift-method-dispatch.html">Swift Method Dispatch</a></li>
 <li><a href="swift-tips.html">Swift Tips</a></li>
+<li><a href="swift-version-log.html">Swift 버전별 업데이트 내역</a></li>
 <li><a href="swiftui.html">SwiftUI</a></li>
 <li><a href="swiftui-combine.html">SwiftUI + Combine</a></li>
 <li><a href="swiftui-errors.html">SwiftUI Errors</a></li>
