--- a/spacemacs.html
+++ b/spacemacs.html
@@ -37,7 +37,11 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Spacemacs</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<div id="outline-container-org74a1894" class="outline-2">
+<h2 id="org74a1894">Spacemacs</h2>
+<div class="outline-text-2" id="text-org74a1894">
+<p>
 스페이스맥스(Spacemacs)는 Community Driven Emacs Configuration 으로 거대한 설정
 파일 묶음 프로젝트입니다. <a href="vim.html">Vim</a> 키맵을 구현하는 evil 을 기반으로 많은 확장들을
 여기에 맞게 설정하고 있습니다. 또한 이름에 맞게 스페이스키를 커맨드 트리거로
@@ -49,9 +53,8 @@ gtag('config', 'UA-44534026-1');
 설정 환경과 Emacs 를 벗어나지 않고도 다양한 확장을 자동으로 설치해 주는 등
 여전히 좋은 설정팩이라고 생각합니다.
 </p>
-
-<hr>
-
+</div>
+</div>
 <div id="outline-container-org9bdc8b6" class="outline-2">
 <h2 id="org9bdc8b6">관련글</h2>
 <div class="outline-text-2" id="text-org9bdc8b6">
