--- a/swift.html
+++ b/swift.html
@@ -43,7 +43,6 @@ gtag('config', 'UA-44534026-1');
 <ul>
 <li><a href="#orgbb7ee11">소개</a></li>
 <li><a href="#org176b2b1">관련글</a></li>
-<li><a href="#org92211d1">버전들</a></li>
 <li><a href="#org41b8b4d">기타 링크들</a></li>
 </ul>
 </div>
@@ -90,6 +89,7 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <h2 id="org176b2b1">관련글</h2>
 <div class="outline-text-2" id="text-org176b2b1">
 <ul class="org-ul">
+<li><a href="swift-version-log.html">Swift 버전별 업데이트 내역</a></li>
 <li><a href="swift-tips.html">Swift Tips</a></li>
 <li><a href="swift-method-dispatch.html">Swift Method Dispatch</a></li>
 <li><a href="./combine-framework.html">Combine Framework</a></li>
@@ -98,17 +98,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="./swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-combine.html">SwiftUI + Combine</a></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org92211d1" class="outline-2">
-<h2 id="org92211d1">버전들</h2>
-<div class="outline-text-2" id="text-org92211d1">
-<p>
-이 글이 작성된 시점에서 가장 최신 안정버전은 5.1 이며 따라서 5.1 버전부터 정리합니다.
-</p>
-<ul class="org-ul">
-<li><a href="./swift-5-1.html">Swift 5.1</a></li>
 </ul>
 </div>
 </div>
