Update minor changes

--- a/magit.html
+++ b/magit.html
@@ -183,8 +183,8 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 <li><a href="doom-emacs.html">Doom Emacs</a></li>
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="git.html">Git</a></li>
-<li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
-<li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
+<li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏 Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
+<li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏 Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
 </ul>
 </div>
 </div>
