--- a/swift.html
+++ b/swift.html
@@ -98,6 +98,7 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="./swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-combine.html">SwiftUI + Combine</a></li>
+<li><a href="swiftui-errors.html">SwiftUI에서 겪은 에러들</a></li>
 </ul>
 </div>
 </div>
