--- a/swiftui.html
+++ b/swiftui.html
@@ -246,8 +246,7 @@ ZStack은 UI를 바닥부터 쌓아가는 형태로 만들 수 있게 해 줍니
 </div>
 <p>
 해당 데이터가 각 아이템 타입이 <code>Identifiable</code> 프로토콜을 따른다면 <code>id</code> 필드를
-생략할 수도 있습니다. 관련 내용은 <a href="swift-5-1.html">Swift 5.1</a> 글에서
-참고해 봅시다.
+생략할 수도 있습니다.
 </p>
 </div>
 </div>
@@ -800,7 +799,8 @@ p.closeSubpath()
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-macos-components.html">SwiftUI macOS Components</a></li>
-<li><a href="swift-5-1.html">Swift 5.1</a></li>
+<li><a href="swift-version-log.html">Swift 버전별 업데이트 내역</a></li>
+<li><a href="swiftui-errors.html">SwiftUI에서 겪은 에러들</a></li>
 <li><a target="_blank" href="https://developer.apple.com/videos/play/wwdc2019/237">🌏 Building Custom Views
 with SwiftUI</a></li>
 <li><a target="_blank" href="https://developer.apple.com/tutorials/swiftui/drawing-paths-and-shapes">🌏 Drawing Paths and Shapes</a></li>
@@ -808,6 +808,6 @@ with SwiftUI</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
