Add new page: pyenv

--- a/doom-emacs-config-tip.html
+++ b/doom-emacs-config-tip.html
@@ -206,9 +206,10 @@ F</code> 를 눌러보면 쉽게 알 수 있습니다.
 <li><a href="./doom-emacs-config.html">Doom Emacs 설정 기본</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
 <li><a href="./emacs.html">Emacs</a></li>
+<li><a target="_blank" href="https://seorenn.tistory.com/57">🌏 Doom Emacs에서 Emojify 사용해보기</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
