--- a/emacs-links.html
+++ b/emacs-links.html
@@ -38,10 +38,11 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">이맥스(Emacs) 관련 링크 모음</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header><ul class="org-ul">
-<li><a target="_blank" href="https://github.com/yuya373/emacs-slack">emacs-slack</a>: 이맥스용 슬랙 클라이언트</li>
+<li><a target="_blank" href="https://github.com/yuya373/emacs-slack">emacs-slack</a>: 이맥스용 슬랙 클라이언트.</li>
 <li><a target="_blank" href="https://github.com/manateelazycat/emacs-application-framework">Emacs
 Application Framework</a>: PyQT 애플리케이션 임베딩 프로젝트.</li>
+<li><a target="_blank" href="https://github.com/caiorss/org-wiki">Org-wiki</a>: Org 를 이용한 개인용 혹은 데스크탑 위키 구축 확장.</li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
