--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ gtag('config', 'UA-44534026-1');
 </p>
 
 <p>
-모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을 작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리쉬 합니다.
+모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을 작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리시 합니다.
 </p>
 
 <div id="outline-container-org164dc77" class="outline-2">
@@ -154,6 +154,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
