--- a/magit.html
+++ b/magit.html
@@ -171,6 +171,7 @@ Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</co
 <h2 id="orgb3f5ba1">기타</h2>
 <div class="outline-text-2" id="text-orgb3f5ba1">
 <ul class="org-ul">
+<li><code>magit-status</code> 에서 <code>$</code> 키를 누르면 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있습니다.</li>
 <li><a href="doom-emacs.html">Doom Emacs</a>에서 <code>SPC g s</code><sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup> 로 현재 파일의 변화내용을 스테이지할 수 있습니다.</li>
 </ul>
 </div>
@@ -197,6 +198,6 @@ status 단축키</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
