--- a/python-update-log.html
+++ b/python-update-log.html
@@ -50,7 +50,7 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-2" id="text-org7ff5792">
 <ul class="org-ul">
 <li><code>:=</code> (Walrus) 오페레이터: 좁은(?) 지역 변수. <a href="swift.html">Swift</a> 의 <code>if let</code> 과 용도가 비슷합니다. 조건문 뿐만 아니라 List Comprehension 등에서도 활용이 가능합니다.</li>
-<li>f-string 추가 표현식: 예를 들어 <code>f'{name=value}'</code> 문자열 내부의 코드가 그대로 실행될 수 있습니다. 자세한 것은 <a href="python-3-f-string.html">Python 3 F-string</a> 내용을 참고합시다.</li>
+<li>f-string 추가 표현식: <code>f'name={value}'</code> 대신 <code>f'{name</code>}'= 문법을 사용할 수 있습니다. 관련된 내용은 <a href="python-3-f-string.html">Python 3 F-string</a> 글을 참고합시다.</li>
 <li><code>/</code> 오퍼레이터: 함수 매개변수 리스트 구분자. <code>f(a, b, /, c, d, *, e, f)</code> 매개변수를 나열할 때 <code>/</code> 앞쪽은 위치로만 표기 가능하며, <code>/</code> 와 <code>*</code> 사이는 위치와 키워드 관계 없이 사용 가능, <code>*</code> 이후는 키워드 표기법만 사용 가능합니다.</li>
 </ul>
 </div>
@@ -64,6 +64,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
