--- a/python.html
+++ b/python.html
@@ -74,6 +74,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
 <li><a href="poetry.html">Poetry</a></li>
 <li><a href="flake8.html">flake8</a></li>
+<li><a href="pyenv.html">pyenv</a></li>
 </ul>
 </div>
 </div>
@@ -160,6 +161,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 30일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
