Update several pages

--- a/emacs-lisp-functions.html
+++ b/emacs-lisp-functions.html
@@ -94,6 +94,11 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org27ee06f">with-temp-buffer</a></li>
 </ul>
 </li>
+<li><a href="#orge683ba0">선택영역 관련</a>
+<ul>
+<li><a href="#orga4479a5">region-beginning, region-end</a></li>
+</ul>
+</li>
 <li><a href="#orgf0082c7">커서 관련</a>
 <ul>
 <li><a href="#org1ddd8ae">goto-char</a></li>
@@ -583,6 +588,21 @@ else 처리가 필요 없다면 <code>when</code> 이나 <code>unless</code> 를
 </div>
 </div>
 </div>
+<div id="outline-container-orge683ba0" class="outline-2">
+<h2 id="orge683ba0">선택영역 관련</h2>
+<div class="outline-text-2" id="text-orge683ba0">
+</div>
+<div id="outline-container-orga4479a5" class="outline-3">
+<h3 id="orga4479a5">region-beginning, region-end</h3>
+<div class="outline-text-3" id="text-orga4479a5">
+<div class="org-src-container">
+<pre class="src src-lisp">(goto-char (region-beginning))
+(goto-char (regin-end))
+</pre>
+</div>
+</div>
+</div>
+</div>
 <div id="outline-container-orgf0082c7" class="outline-2">
 <h2 id="orgf0082c7">커서 관련</h2>
 <div class="outline-text-2" id="text-orgf0082c7">
@@ -686,6 +706,6 @@ else 처리가 필요 없다면 <code>when</code> 이나 <code>unless</code> 를
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
