--- a/poetry.html
+++ b/poetry.html
@@ -224,6 +224,14 @@ pytest = "^5.2"
 <p>
 마치 pip로 특정 버전 패키지를 설치하는 것과 동일하기 때문에 어색하지는 않은 커맨드입니다.
 </p>
+
+<p>
+개발 전용 의존성으로 패키지를 추가하려면 <code>--dev</code> 옵션을 사용할 수 있습니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">poetry add --dev PACKAGE_NAME
+</pre>
+</div>
 </div>
 </div>
 <div id="outline-container-org79e7b03" class="outline-2">
@@ -374,6 +382,6 @@ Docker 컨테이너는 독립된 환경이므로 딱히 virtualenv 환경을 사
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
